[tool.poetry]
name = "Twitch Announcer"
version = "1.0.0"
description = ""
authors = ["Shi Shiawase <you@example.com>"]

[project.urls]
"Github" = "https://github.com/replshiawase/Twitch-Announcer"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
disnake = "^2.8.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
